// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OSC tool contracts exported from src/tools/index.ts lists every exported OSC tool with a stable contract fixture 1`] = `
[
  "eos_ping",
  "eos_command",
  "eos_new_command",
  "eos_command_with_substitution",
  "eos_get_command_line",
  "eos_get_user_command_line",
  "eos_channel_select",
  "eos_channel_set_level",
  "eos_channel_set_dmx",
  "eos_set_dmx",
  "eos_channel_set_parameter",
  "eos_channel_get_info",
  "eos_group_select",
  "eos_group_set_level",
  "eos_group_get_info",
  "eos_group_list_all",
  "eos_cue_fire",
  "eos_cue_go",
  "eos_cue_stop_back",
  "eos_cue_select",
  "eos_cue_get_info",
  "eos_cue_list_all",
  "eos_cuelist_get_info",
  "eos_cuelist_bank_create",
  "eos_cuelist_bank_page",
  "eos_get_active_cue",
  "eos_get_pending_cue",
  "eos_intensity_palette_fire",
  "eos_focus_palette_fire",
  "eos_color_palette_fire",
  "eos_beam_palette_fire",
  "eos_palette_get_info",
  "eos_preset_fire",
  "eos_preset_select",
  "eos_preset_get_info",
  "eos_submaster_record",
  "eos_submaster_set_level",
  "eos_submaster_bump",
  "eos_submaster_get_info",
  "eos_fader_bank_create",
  "eos_fader_set_level",
  "eos_fader_load",
  "eos_fader_unload",
  "eos_fader_page",
  "eos_macro_fire",
  "eos_macro_select",
  "eos_macro_get_info",
  "eos_effect_select",
  "eos_effect_stop",
  "eos_effect_get_info",
  "eos_wheel_tick",
  "eos_switch_continuous",
  "eos_set_color_hs",
  "eos_set_color_rgb",
  "eos_set_pantilt_xy",
  "eos_set_xyz_position",
  "eos_get_active_wheels",
  "eos_key_press",
  "eos_softkey_press",
  "eos_get_softkey_labels",
  "eos_direct_select_bank_create",
  "eos_direct_select_press",
  "eos_direct_select_page",
  "eos_magic_sheet_open",
  "eos_magic_sheet_get_info",
  "eos_pixmap_select",
  "eos_pixmap_get_info",
  "eos_curve_select",
  "eos_curve_get_info",
  "eos_patch_get_channel_info",
  "eos_patch_get_augment3d_position",
  "eos_patch_get_augment3d_beam",
  "eos_snapshot_recall",
  "eos_snapshot_get_info",
  "eos_get_show_name",
  "eos_get_live_blind_state",
  "eos_toggle_staging_mode",
  "eos_get_count",
  "eos_get_list_all",
  "eos_fpe_get_set_count",
  "eos_fpe_get_set_info",
  "eos_fpe_get_point_info",
  "eos_address_select",
  "eos_address_set_level",
  "eos_address_set_dmx",
  "eos_set_user_id",
  "eos_cue_record",
  "eos_cue_update",
  "eos_cue_label_set",
  "eos_palette_record",
  "eos_palette_label_set",
  "eos_patch_set_channel",
]
`;

exports[`OSC tool contracts exported from src/tools/index.ts lists every tool exported from src/tools/index.ts with a stable fixture 1`] = `
[
  "eos_capabilities_get",
  "ping",
  "eos_connect",
  "eos_configure",
  "eos_ping",
  "eos_reset",
  "eos_subscribe",
  "eos_workflow_create_look",
  "eos_workflow_create_cue_series",
  "eos_workflow_patch_fixture",
  "eos_workflow_patch_scan",
  "eos_workflow_autopatch_band",
  "eos_workflow_rehearsal_go_safe",
  "eos_workflow_build_groups_and_palettes",
  "eos_workflow_update_cue_look",
  "eos_command",
  "eos_new_command",
  "eos_command_with_substitution",
  "eos_get_command_line",
  "eos_get_user_command_line",
  "eos_channel_select",
  "eos_channel_set_level",
  "eos_channel_set_dmx",
  "eos_set_dmx",
  "eos_channel_set_parameter",
  "eos_channel_get_info",
  "eos_group_select",
  "eos_group_set_level",
  "eos_group_get_info",
  "eos_group_list_all",
  "eos_enable_logging",
  "eos_readiness_check",
  "eos_get_diagnostics",
  "eos_console_targets",
  "eos_get_version",
  "eos_get_setup_defaults",
  "eos_cue_fire",
  "eos_cue_go",
  "eos_cue_stop_back",
  "eos_cue_select",
  "eos_cue_get_info",
  "eos_cue_list_all",
  "eos_cuelist_get_info",
  "eos_cuelist_bank_create",
  "eos_cuelist_bank_page",
  "eos_get_active_cue",
  "eos_get_pending_cue",
  "eos_intensity_palette_fire",
  "eos_focus_palette_fire",
  "eos_color_palette_fire",
  "eos_beam_palette_fire",
  "eos_palette_get_info",
  "eos_preset_fire",
  "eos_preset_select",
  "eos_preset_get_info",
  "eos_submaster_record",
  "eos_submaster_set_level",
  "eos_submaster_bump",
  "eos_submaster_get_info",
  "eos_fader_bank_create",
  "eos_fader_set_level",
  "eos_fader_load",
  "eos_fader_unload",
  "eos_fader_page",
  "eos_macro_fire",
  "eos_macro_select",
  "eos_macro_get_info",
  "eos_effect_select",
  "eos_effect_stop",
  "eos_effect_get_info",
  "eos_wheel_tick",
  "eos_switch_continuous",
  "eos_set_color_hs",
  "eos_set_color_rgb",
  "eos_set_pantilt_xy",
  "eos_set_xyz_position",
  "eos_get_active_wheels",
  "eos_key_press",
  "eos_softkey_press",
  "eos_get_softkey_labels",
  "eos_direct_select_bank_create",
  "eos_direct_select_press",
  "eos_direct_select_page",
  "eos_magic_sheet_open",
  "eos_magic_sheet_get_info",
  "eos_pixmap_select",
  "eos_pixmap_get_info",
  "eos_curve_select",
  "eos_curve_get_info",
  "eos_fixture_search",
  "eos_patch_get_channel_info",
  "eos_patch_get_augment3d_position",
  "eos_patch_get_augment3d_beam",
  "eos_snapshot_recall",
  "eos_snapshot_get_info",
  "eos_get_show_name",
  "eos_get_live_blind_state",
  "eos_toggle_staging_mode",
  "eos_showfile_import",
  "eos_showfile_get_patch",
  "eos_showfile_list_groups",
  "eos_showfile_list_labels",
  "eos_showfile_list_cues",
  "eos_showfile_list_palettes",
  "eos_showfile_list_fixtures",
  "eos_get_count",
  "eos_get_list_all",
  "eos_fpe_get_set_count",
  "eos_fpe_get_set_info",
  "eos_fpe_get_point_info",
  "eos_address_select",
  "eos_address_set_level",
  "eos_address_set_dmx",
  "eos_set_user_id",
  "session_set_current_user",
  "session_get_current_user",
  "session_set_context",
  "session_get_context",
  "session_clear_context",
  "eos_cue_record",
  "eos_cue_update",
  "eos_cue_label_set",
  "eos_palette_record",
  "eos_palette_label_set",
  "eos_patch_set_channel",
]
`;
